<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.todoapplication.R" />

        <variable
            name="viewModel"
            type="com.todoapplication.ui.fragments.addtask.AddTaskViewModel" />

        <variable
            name="navListener"
            type="com.todoapplication.navigation.ReturnToBackListener" />

        <variable
            name="fragmentListener"
            type="com.todoapplication.clicklisteners.AddTaskFragmentClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.addtask.AddTaskFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/close_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> navListener.returnToBack()}"
                    app:icon="@drawable/ic_close"
                    app:iconSize="32dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{() -> fragmentListener.saveTask()}"
                    android:text="@string/save"
                    android:textSize="20sp" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_text_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/something_to_do"
                    app:boxCornerRadiusBottomEnd="20sp"
                    app:boxCornerRadiusBottomStart="20sp"
                    app:boxCornerRadiusTopEnd="20sp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperText="@string/required"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/task_text_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_menu"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/importance"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20sp"
                    app:boxCornerRadiusTopStart="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider1">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/importance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text="@string/low"
                        app:setDropdownMenu="@{null}" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dropdown_menu" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/deadline_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ripple_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/finish_until"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/finish_until"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.deadline}"
                        android:textColor="?attr/colorOnPrimaryContainer"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/finish_until"
                        app:layout_constraintTop_toBottomOf="@id/finish_until" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:onCheckedChanged="@{(switch, checked) -> viewModel.handleSwitchDeadlineState(switch, checked)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/finish_until" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deadline_layout" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> fragmentListener.deleteTask()}"
                    android:text="@string/delete"
                    android:textColor="?attr/colorError"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_delete"
                    app:iconSize="24dp"
                    app:iconTint="?attr/colorError"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
                    app:rippleColor="?attr/colorOnErrorContainer" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>